Bugfix - Ronnie's Rocket was misaligned

--- a/assets/scss/pages/_team.scss
+++ b/assets/scss/pages/_team.scss
@@ -51,10 +51,11 @@
 
 			.image.rocket {
 				position: relative;
+				margin-top: 15px;
 				&:before {
 					content: '';
 					position: absolute;
-					top: 50%;
+					top: 80%;
 					left: 50%;
 					transform: translate(-50%, -50%);
 					background: url(../images/svg/rocket.svg);
